--- a/css/style.css
+++ b/css/style.css
@@ -687,7 +687,7 @@ body{
 
 /* Section 8 */
 .sec8_middle{
-    background: url(../img/ses8-55.jpeg) no-repeat center;
+    background: url(../img/bg8.jpeg) no-repeat center;
     background-size: cover;
     background-attachment: fixed;
     color: #AFAFAF;    
